--- a/front/src/app/coleta/coleta.component.html
+++ b/front/src/app/coleta/coleta.component.html
@@ -63,8 +63,8 @@
           <mat-form-field class="full-width-field" appearance="fill">
             <mat-label>Larvas</mat-label>
             <select matNativeControl formControlName="larvas">
-              <option value="N" selected>Não</option>
-              <option value="S">Sim</option>
+              <option value="false" selected>Não</option>
+              <option value="true">Sim</option>
             </select>
           </mat-form-field>
         </div>
@@ -73,72 +73,18 @@
           <mat-form-field class="full-width-field" appearance="fill">
             <mat-label>Aviso</mat-label>
             <select matNativeControl formControlName="aviso">
-              <option value="N" selected>Não</option>
-              <option value="S">Sim</option>
+              <option value="false" selected>Não</option>
+              <option value="true">Sim</option>
             </select>
           </mat-form-field>
         </div>
 
-        <h4 class="text-center mb-4 text-primary display-6 text-primary">
-          Endereço da coleta
-        </h4>
-
-        <div class="mb-3">
-          <mat-form-field class="full-width-field" appearance="fill">
-            <mat-label>CEP</mat-label>
-            <input
-              matInput
-              placeholder="cep"
-              formControlName="cep"
-              (blur)="buscaCep(this)"
-            />
-          </mat-form-field>
-        </div>
-
-        <div class="mb-3">
-          <mat-form-field class="full-width-field" appearance="fill">
-            <mat-label>Lougradouro/Rua</mat-label>
-            <input matInput placeholder="rua" formControlName="rua" />
-          </mat-form-field>
-        </div>
-
-        <div class="mb-3">
-          <mat-form-field class="full-width-field" appearance="fill">
-            <mat-label>Número</mat-label>
-            <input matInput placeholder="numero" formControlName="numero" />
-          </mat-form-field>
-        </div>
-
-        <div class="mb-3">
-          <mat-form-field class="full-width-field" appearance="fill">
-            <mat-label>Complemento</mat-label>
-            <input
-              matInput
-              placeholder="complemento"
-              formControlName="complemento"
-            />
-          </mat-form-field>
-        </div>
-
-        <div class="mb-3">
-          <mat-form-field class="full-width-field" appearance="fill">
-            <mat-label>Bairro</mat-label>
-            <input matInput placeholder="bairro" formControlName="bairro" />
-          </mat-form-field>
-        </div>
-
-        <div class="mb-3">
-          <mat-form-field class="full-width-field" appearance="fill">
-            <mat-label>Cidade</mat-label>
-            <input matInput placeholder="cidade" formControlName="cidade" />
-          </mat-form-field>
-        </div>
         <div class="mb-3">
           <button
             mat-raised-button
             class="full-btn outline-none bg-success text-white"
           >
-            Cadastrar ocorrência
+            Continuar
           </button>
         </div>
       </mat-card>
