--- a/front/src/app/template/footer/footer.component.html
+++ b/front/src/app/template/footer/footer.component.html
@@ -8,8 +8,12 @@
     <mat-icon fill="primary">dashboard</mat-icon>
   </button>
   <button mat-raised-button color="primary" class="outline-none">
+    <mat-icon class="outline-none text-center">cloud_upload</mat-icon>
+  </button>
+  <button mat-raised-button color="primary" class="outline-none">
     <mat-icon class="outline-none text-center">cloud_download</mat-icon>
   </button>
+
   <button
     mat-raised-button
     color="primary"
