--- a/front/src/app/coleta-endereco/coleta-endereco.component.html
+++ b/front/src/app/coleta-endereco/coleta-endereco.component.html
@@ -28,8 +28,8 @@
             <mat-label>Lougradouro/Rua</mat-label>
             <input
               matInput
-              placeholder="rua"
-              formControlName="rua"
+              placeholder="logradouro"
+              formControlName="logradouro"
               maxlength="30"
               minlength="3"
             />
@@ -73,7 +73,11 @@
         <div class="mb-3">
           <mat-form-field class="full-width-field" appearance="fill">
             <mat-label>Cidade</mat-label>
-            <input matInput placeholder="cidade" formControlName="cidade" />
+            <input
+              matInput
+              placeholder="localidade"
+              formControlName="localidade"
+            />
           </mat-form-field>
         </div>
         <div class="mb-4">
