--- a/front/src/app/login/login.component.html
+++ b/front/src/app/login/login.component.html
@@ -38,9 +38,9 @@
           >
             Login
           </button>
-          <a class="mt-2" mat-button color="primary" [routerLink]="['cadastro']"
+          <!-- <a class="mt-2" mat-button color="primary" [routerLink]="['cadastro']"
             >Cadastrar</a
-          >
+          > -->
         </div>
       </form>
     </div>
