--- a/front/src/app/template/footer/footer.component.html
+++ b/front/src/app/template/footer/footer.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar class="footer">
   <button
+    *ngIf="admin"
     mat-raised-button
     color="primary"
     class="outline-none"
@@ -8,6 +9,7 @@
     <mat-icon fill="primary">dashboard</mat-icon>
   </button>
   <button
+    *ngIf="admin"
     mat-raised-button
     color="primary"
     class="outline-none"
@@ -22,6 +24,7 @@
   </button>
 
   <button
+    *ngIf="admin"
     mat-raised-button
     color="primary"
     class="outline-none"
@@ -30,6 +33,7 @@
     <mat-icon class="outline-none text-center">add</mat-icon>
   </button>
   <button
+    *ngIf="admin"
     mat-raised-button
     color="primary"
     class="outline-none"
